--- a/ci/css/Sieses.css
+++ b/ci/css/Sieses.css
@@ -1,8 +1,8 @@
 html {
-    background-color : LightGrey;
+    background-color : #37474F;
     padding : 7% 15%;
     font : 17px Arial , sans-serif;
-    color : Blue;
+    color : #9FA8DA;
         }
 
 table {
